<resources>
    <string name="app_name">BilliNavi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_side_menu">SideMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_ranking">랭킹</string>
    <string name="menu_lounge">큐 라운지</string>
    <string name="menu_storeInfo">매장 정보</string>
    <string name="menu_myRoom">마이룸</string>
    <string name="menu_setting">설정</string>
    <string name="menu_search">검색</string>
    <string name="menu_logout">로그아웃</string>
    <string name="title_activity_map">Map</string>

</resources>
