<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/side_menu_1"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/side_menu_2"
            android:title="@string/menu_ranking" />
        <item
            android:id="@+id/nav_lounge"
            android:icon="@drawable/side_menu_3"
            android:title="@string/menu_lounge" />
        <item
            android:id="@+id/nav_storeInfo"
            android:icon="@drawable/side_menu_4"
            android:title="@string/menu_storeInfo" />
        <item
            android:id="@+id/nav_myRoom"
            android:icon="@drawable/side_menu_5"
            android:title="@string/menu_myRoom" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/side_menu_6"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/side_menu_7"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/side_menu_8"
            android:title="@string/menu_logout" />
    </group>

</menu>
